@@ -1,4 +1,5 @@
 -   Starter pack bonus decreased from 20% to 15%
+-   Increased building prices for replicators and nuke
 
 23/08/2020
 -   Added Anti Missiles
